Fixes font-size and spacing issue

--- a/assets/css/source/_asistencia_detail.scss
+++ b/assets/css/source/_asistencia_detail.scss
@@ -123,28 +123,30 @@
         }
 
         .assist-phone-item{
-            padding: 15px;
+            padding: 15px 10px;
             margin-top: 15px;
             background-color: $white;
 
             .item-name{
+                padding: 0;
                 font-family: $primary-light;
                 font-size: $regular-desktop;
                 color: $darkblue;
 
                 @include for-phone-only{
-                    font-size: $small-mobile;
+                    font-size: $regular-mobile;
                 }
                 
             }
 
             .item-phone{
+                padding: 0;
                 font-family: $primary-black;
                 font-size: 20px;
                 color: $darkblue;
 
                 @include for-phone-only{
-                    font-size: $regular-mobile;
+                    font-size: $medium-mobile;
                 }
 
 
